feat: vendor management — entity, auth, restaurant settings, & role-based JWT